# Minesweeper

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
src/: CMakeLists.txt  config.h.in  game.cpp  game.h  main.cpp
src/GameLogic/: game.cpp
src/Menu/: menu.h
